website/versioned_docs/version-0.66/DevMenuControl-api-windows.md
---
id: version-0.66-DevMenuControl
title: DevMenuControl
original_id: DevMenuControl
---

Kind: `class`

Extends: [`UserControl`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.UserControl)



## Properties
### BreakOnNextLine
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `BreakOnNextLine`

### BreakOnNextLineText
`readonly`  [`TextBlock`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.TextBlock) `BreakOnNextLineText`

### Cancel
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `Cancel`

### ConfigBundler
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `ConfigBundler`

### DirectDebug
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `DirectDebug`

### DirectDebugDesc
`readonly`  [`TextBlock`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.TextBlock) `DirectDebugDesc`

### DirectDebugText
`readonly`  [`TextBlock`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.TextBlock) `DirectDebugText`

### FastRefresh
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `FastRefresh`

### FastRefreshText
`readonly`  [`TextBlock`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.TextBlock) `FastRefreshText`

### Inspector
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `Inspector`

### Reload
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `Reload`

### RemoteDebug
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `RemoteDebug`

### RemoteDebugDesc
`readonly`  [`TextBlock`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.TextBlock) `RemoteDebugDesc`

### RemoteDebugText
`readonly`  [`TextBlock`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.TextBlock) `RemoteDebugText`

### SamplingProfiler
`readonly`  [`Button`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.Button) `SamplingProfiler`

### SamplingProfilerDescText
`readonly`  [`TextBlock`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.TextBlock) `SamplingProfilerDescText`

### SamplingProfilerIcon
`readonly`  [`FontIcon`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.FontIcon) `SamplingProfilerIcon`

### SamplingProfilerText
`readonly`  [`TextBlock`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Controls.TextBlock) `SamplingProfilerText`


## Constructors
### DevMenuControl
 **`DevMenuControl`**()





